# ht_hvae

./: .gitignore  README.md  hvae_kv_injection.ipynb  pyproject.toml
data/: __init__.py  dataset_class.py  process_dual_stream.py
evaluations/: calculate_nll_inference.py  compute_flat_plans.py  discriminate_unrestricted.py  first_k_tokens_fed.py  first_token_index.py  first_token_test.py  greedy_decode_oracle.py  hardest_of_k.py  hardest_of_k_utils.py  latent_discriminate_same_length.py  latent_neighbours.py  logits_from_plan_and_history.py  logits_from_plan_only.py  loss_unshuffled.py  nll_per_token.py  noisy_history_test.py  oracle_sweep.py  plan_effect_curve.py  plan_only_rollout_test.py  plot_effect_curves.py  sample_same_length.py  sbert_embed.py  sbert_hardest_of_k.py  shuffled_zi.py  shuffled_zt.py
loss/: __init__.py  loss.py
model/: __init__.py  decoder_kv_cache.py  encoder_distill_bert.py  encoder_random_word_encoder.py  mlp.py  mlp_prior.py
train/: train.py  train_one_epoch.py
utils/: __init__.py  big_batch_for_AU.py  big_batch_loader.py  compute_active_units.py  config.py  decode_ids.py  load_saved_checkpoints.py  reparamaterize.py  save_checkpoint.py
